--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,9 @@
+@import-normalize
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  background: linear-gradient(135deg, #71b7e6, #9b59b6);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -21,6 +22,7 @@ a:hover {
 }
 
 body {
+  background: linear-gradient(135deg, #71b7e6, #9b59b6);
   margin: 0;
   display: flex;
   place-items: center;
